--- a/Motor_driver/Motor_driver_software/Motor_driver_software.ioc
+++ b/Motor_driver/Motor_driver_software/Motor_driver_software.ioc
@@ -71,7 +71,7 @@ Mcu.IP4=TIM1
 Mcu.IP5=TIM2
 Mcu.IP6=TIM3
 Mcu.IP7=TIM4
-Mcu.IP8=USART2
+Mcu.IP8=USART3
 Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
@@ -85,10 +85,10 @@ Mcu.Pin14=PB6
 Mcu.Pin15=PB7
 Mcu.Pin16=VP_SYS_VS_ND
 Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
+Mcu.Pin2=PA6
+Mcu.Pin3=PA7
+Mcu.Pin4=PB10
+Mcu.Pin5=PB11
 Mcu.Pin6=PB12
 Mcu.Pin7=PB13
 Mcu.Pin8=PB14
@@ -114,7 +114,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=SERVO1
@@ -128,14 +127,6 @@ PA10.Signal=S_TIM1_CH3
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=MOTOR_B_NEG
 PA11.Signal=S_TIM1_CH4
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=COM_TX
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=COM_RX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=ENCODER1_A
 PA6.Signal=S_TIM3_CH1
@@ -148,6 +139,16 @@ PA8.Signal=S_TIM1_CH1
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=MOTOR_A_NEG
 PA9.Signal=S_TIM1_CH2
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=COM_TX
+PB10.Locked=true
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=COM_RX
+PB11.Locked=true
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=STEPPER_A
 PB12.Locked=true
@@ -205,7 +206,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-SystemClock_Config-RCC-false-HAL-false,8-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -249,10 +250,9 @@ TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,Prescaler,OCMode_PWM-PWM Generation2 CH2,OCMode_PWM-PWM Generation4 CH4,OCIdleState_3
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Period,Prescaler,OCMode_PWM-PWM Generation2 CH2,OCIdleState_3,Channel-PWM Generation4 CH4
 TIM1.OCIdleState_3=TIM_OCIDLESTATE_RESET
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_PWM2
-TIM1.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_PWM2
 TIM1.Period=99
 TIM1.Prescaler=6399
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
@@ -266,8 +266,8 @@ TIM3.Period=7683
 TIM4.EncoderMode=TIM_ENCODERMODE_TI12
 TIM4.IPParameters=EncoderMode,Period
 TIM4.Period=7683
-USART2.IPParameters=VirtualMode
-USART2.VirtualMode=VM_ASYNC
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
