add DMA to DC motors controlling

--- a/Motor_driver/MD_new/MD_new.ioc
+++ b/Motor_driver/MD_new/MD_new.ioc
@@ -1,16 +1,58 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=TIM1_CH1
+Dma.Request1=TIM1_CH2
+Dma.Request2=TIM1_CH3
+Dma.Request3=TIM1_CH4/TRIG/COM
+Dma.RequestsNb=4
+Dma.TIM1_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH1.0.Instance=DMA1_Channel2
+Dma.TIM1_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH1.0.Mode=DMA_NORMAL
+Dma.TIM1_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH1.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM1_CH2.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH2.1.Instance=DMA1_Channel3
+Dma.TIM1_CH2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH2.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH2.1.Mode=DMA_NORMAL
+Dma.TIM1_CH2.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH2.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH2.1.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM1_CH3.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH3.2.Instance=DMA1_Channel6
+Dma.TIM1_CH3.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH3.2.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH3.2.Mode=DMA_NORMAL
+Dma.TIM1_CH3.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH3.2.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH3.2.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH3.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM1_CH4/TRIG/COM.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH4/TRIG/COM.3.Instance=DMA1_Channel4
+Dma.TIM1_CH4/TRIG/COM.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH4/TRIG/COM.3.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH4/TRIG/COM.3.Mode=DMA_CIRCULAR
+Dma.TIM1_CH4/TRIG/COM.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH4/TRIG/COM.3.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH4/TRIG/COM.3.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH4/TRIG/COM.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP4=TIM2
-Mcu.IP5=TIM3
-Mcu.IP6=TIM4
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM1
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=TIM4
+Mcu.IP8=USART3
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -39,6 +81,10 @@ Mcu.UserName=STM32F103C8Tx
 MxCube.Version=5.1.0
 MxDb.Version=DB.5.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -142,7 +188,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
